# cortex

./: .clang-format  README.md  bundle.sh  meson.build
src/cortex/: bridge.c  bridge.h  buffers.c  bus.c  cmd.c  defaults.c  excavator.c  file.c  floatbuffer.c  generator.c  levels.c  main.c  maincube.c  menu.c  mtfile.c  particle.c  physics2.c  pixeltext.c  renderer.c  scene.c  script.c  settings.c  triangulate.c  voxel.c
src/cortex/gl/: renderer.c
src/cortex/shaders/: blend.fsh  blend.vsh  blend_es.fsh  blend_es.vsh  blur.fsh  blur.vsh  blur_es.fsh  blur_es.vsh  glow.fsh  glow.vsh  glow_es.fsh  glow_es.vsh
src/modules/core/: mtbmp.c  mtbus.c  mtcstr.c  mtfile.c  mtmap.c  mtmem.c  mtpipe.c  mtstr.c  mtvec.c
src/modules/tools/: cmd.c  floatbuffer.c  math1.c  math2.c  math3.c  math4.c  ogl.c  physics2.c  pixeltext.c  settings.c  triangulate.c
src/modules/utils/: str_util.c
src/modules/voxel/: ogl.c  pixeltext.c
src/zc_core/: zc_path.c  zc_vector.c
svg/appstore/: Icon.pxm
svg/steam/: group_header_community.pxm  headercapsule.pxm  icon_community.png.icns  icon_community.pxm  largecapsule.pxm  main capsule.pxm  smallcapsule.pxm  smallcapsule_community.pxm
